# OS-doodle

./: README.md
blog-os/: Cargo.toml  README.md
blog-os/.cargo/: config.toml
blog-os/src/: main.rs  vga_buffer.rs
bochsC/: bochsrc  make-boot-sector.sh  sect.asm
bochsC/create-binary/: Cargo.toml
bochsC/create-binary/src/: main.rs
