[package]
name = "blog-os"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"      # An experimental pure-Rust x86 bootloader.
